dark mode fixes

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@
     align-items: center;
     justify-content: center;
     z-index: 99;
-    background-color: white;
+
 }
 
 .hideLoading {
